--- a/style.css
+++ b/style.css
@@ -2,8 +2,22 @@
     margin: 0;
     padding: 0;
 }
-.menu-bar, .two-icon{
+.menu-option, .two-icon{
     display: none;
+    
+    /* position: absolute; */
+}
+/* .menu-bar{
+    background: aqua;
+} */
+.menu-option > a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-radius: 8px;
+    margin: 3px 6px;
+    background-color: rgb(255, 153, 0);
 }
 nav{
     display: flex;
@@ -35,8 +49,9 @@ nav > .right{
     .menu-bar > ul{
         display: none;
     }
-    .menu-bar:hover ul{
+    .menu-bar:hover .menu-option{
         display: block;
         margin-top: 20px;
+        /* text-decoration: none; */
     }
 }
