--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 87px 120px;
+    margin: 40px 120px;
 }
 nav > .right{
     display: flex;
@@ -32,6 +32,8 @@ nav > .right{
     /* position: absolute; */
     justify-content: space-evenly;
     align-items: center;
+    margin-bottom: 20px;
+
 }
 .header-container h1{
     font-size: 52px;
@@ -41,7 +43,7 @@ nav > .right{
 .header-container p{
     font-size: 16px;
     line-height: 24px;
-    margin-bottom: 16px;
+    /* margin-bottom: 16px; */
 
 }
 .header-description > button{
@@ -53,9 +55,18 @@ nav > .right{
     margin-bottom: 16px;
 
 }
-.header-img{
-    height: 440px;
-    width: 414px;
+.header-img {
+    background-image: linear-gradient(rgba(255, 0, 0, 0.23),rgba(0, 0, 0, 0.225)),url(images/Circle\ design.svg);
+    height: 37%;
+    width: 31%;
+    border-radius: 100%;
+    padding: 15px;
+}
+.company{
+    text-align: center;
+}
+.company > img{
+    margin: 35px;
 }
 @media screen and (max-width: 576px) {
     *{
@@ -63,8 +74,8 @@ nav > .right{
         padding: 0;
         background-color: rgb(168, 197, 110);
     }
-    nav{
-        margin: 35px 99px;
+    nav {
+        margin: 35px 40px;
     }
     .menu-bar,  .two-icon{
         display: flex;
@@ -82,4 +93,21 @@ nav > .right{
         margin-top: 20px;
         /* text-decoration: none; */
     }
+    .header-container {
+        text-align: center;
+        flex-direction: column-reverse;
+        margin-bottom: 20px;
+    }
+    .header-description > button {
+        margin: 15px;
+    }
+    .header-container h1 {
+        font-size: 40px;
+        line-height: 67px;
+        margin-bottom: 13px;
+    }
+    .company > img{
+        margin: 20px 10px;
+    }
+    
 }
